# vault-unseal

./: .gitignore  Cargo.toml  unseal_example.toml
dev/: .gitignore  docker-compose.yaml
dev/dev/config/vault1/: vault.hcl
dev/dev/config/vault2/: vault.hcl
dev/dev/config/vault3/: vault.hcl
src/: bitwarden.rs  cli.rs  conf.rs  error.rs  lib.rs  main.rs  shoutdown.rs  worker.rs
